--- a/app/src/main/res/layout/activity_addpublication.xml
+++ b/app/src/main/res/layout/activity_addpublication.xml
@@ -181,12 +181,13 @@
 
             <ListView
                 android:id="@+id/authorslist_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
                 android:layout_marginStart="16dp"
                 android:clickable="false"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginTop="8dp"
+
+                android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
