--- a/app/src/main/res/layout/activity_addpatent.xml
+++ b/app/src/main/res/layout/activity_addpatent.xml
@@ -183,7 +183,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Add Authors"
+                android:text="Add Inventors"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
