Register Activity Interface.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#C3F8F9F9">
 
+    <ProgressBar
+        android:id="@+id/pbar_"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:indeterminate="true"
+        android:visibility="gone"/>
+
 
     <TextView
         android:id="@+id/textView3"
@@ -280,6 +295,10 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+
+
+
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout9"
                 android:layout_width="0dp"
@@ -336,7 +355,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="University"
-                    android:inputType="text" />
+                    android:inputType="text"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
