--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,7 +150,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="32dp"
                         app:errorEnabled="true"
@@ -163,7 +162,7 @@
                             android:id="@+id/fnamelogintext"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="E-Mail"
+                            android:hint="E-Code"
                             android:inputType="textEmailAddress" />
 
                     </com.google.android.material.textfield.TextInputLayout>
