Layouts Updated, Verify Request done.

--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -47,7 +47,7 @@
         android:background="@drawable/round_back"
         android:gravity="center"
         android:lines="2"
-        android:text="PUBLICATIONS \n 0"
+        android:text="Publications \n 0"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@
         android:background="@drawable/round_back"
         android:gravity="center"
         android:lines="2"
-        android:text="PATENTS \n 0"
+        android:text="Patents \n 0"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +90,7 @@
         android:background="@drawable/round_back"
         android:gravity="center"
         android:lines="4"
-        android:text="HONORS \n And \n REWARDS \n 0"
+        android:text="Honors \n And \n Awards\n 0"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -111,7 +111,7 @@
         android:background="@drawable/round_back"
         android:gravity="center"
         android:lines="2"
-        android:text="PROJECT \n 0"
+        android:text="Projects \n 0"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
