--- a/app/src/main/res/layout/fragment_profile_fragement.xml
+++ b/app/src/main/res/layout/fragment_profile_fragement.xml
@@ -7,10 +7,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-
-
-
     <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
@@ -57,21 +53,23 @@
                             android:id="@+id/heading1_id"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:text="About Me"
                             android:textColor="#000"
                             android:textSize="25sp"
+                            style="Text"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.045" />
+                            app:layout_constraintVertical_bias="0.0" />
 
                         <TextView
                             android:id="@+id/text1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="NAME"
+                            android:text="Name"
                             android:textColor="#D82323"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -282,7 +280,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="28dp"
-                            android:text="DOB"
+                            android:text="Date Of Birth"
                             android:textColor="#D82323"
                             android:textSize="20sp"
                             android:textStyle="bold"
