--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,8 +46,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -91,7 +90,7 @@
                 android:layout_marginTop="150dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="80dp"
-                app:cardCornerRadius="15dp"
+                app:cardCornerRadius="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -122,20 +121,6 @@
                         app:layout_constraintTop_toBottomOf="@+id/forgetpasswordloginbutton"
                         app:layout_constraintVertical_bias="0.41000003" />
 
-
-                    <ProgressBar
-                        android:id="@+id/pbar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:visibility="invisible"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/textView2"
@@ -178,7 +163,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="E-Code"
-                            android:inputType="textEmailAddress" />
+                            android:inputType="textPersonName"
+                            android:maxLength="8"
+                            android:digits="0123456789|QWERTYUIOPASDFGHJKLZXCVBNM|qwertyuiopasdfghjklzxcvbnm"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
