--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -66,19 +66,19 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="56dp"
             android:layout_marginEnd="32dp"
-            android:clickable="true"
-            android:elevation="4dp"
+            android:clickable="false"
             android:src="@drawable/p_file"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.056" />
+            app:layout_constraintVertical_bias="0.056"/>
 
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="21dp"
+            android:visibility="gone"
             android:layout_height="18dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
