--- a/app/src/main/res/layout/activity_addproject.xml
+++ b/app/src/main/res/layout/activity_addproject.xml
@@ -32,7 +32,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_addpublication"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,12 +165,12 @@
 
             <ListView
                 android:id="@+id/authorslist_id"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:clickable="false"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
+                android:clickable="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
