--- a/app/src/main/res/layout/activity_addpublication.xml
+++ b/app/src/main/res/layout/activity_addpublication.xml
@@ -167,7 +167,7 @@
 
 
             <ImageView
-                android:id="@+id/addauthbtn_id"
+                android:id="@+id/addauthbtn_id1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -180,13 +180,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />
 
             <ListView
-                android:id="@+id/authorslist_id"
+                android:id="@+id/authorslist1_id"
                 android:layout_width="0dp"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:clickable="false"
+                android:clickable="true"
                 android:layout_marginTop="8dp"
-
                 android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                 app:layout_constraintStart_toStartOf="parent"
